# rpv-evt-driven-os

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  classes.html  cmake_int.html  cmd_list.html  cmd_svc_table.html  command_8h_source.html  console_8h.html  console_8h.js  console_8h__incl.map  console_8h__incl.md5  console_8h_source.html  dir_3d69f64eaf81436fe2b22361382717e5.html  dir_3d69f64eaf81436fe2b22361382717e5.js  dir_66a71df50f8ef4c2c762b7ca1541a3ab.html  dir_66a71df50f8ef4c2c762b7ca1541a3ab.js  dir_66a71df50f8ef4c2c762b7ca1541a3ab_dep.map  dir_66a71df50f8ef4c2c762b7ca1541a3ab_dep.md5  dir_b8caaf69a75db871a79ff407ea3a556f.html  dir_b8caaf69a75db871a79ff407ea3a556f.js  dir_b8caaf69a75db871a79ff407ea3a556f_dep.map  dir_b8caaf69a75db871a79ff407ea3a556f_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  disk_8h.html  disk_8h.js  disk_8h__incl.map  disk_8h__incl.md5  disk_8h_source.html  docs.dox  events_8h_source.html  fat_8h.html  fat_8h.js  fat_8h__incl.map  fat_8h__incl.md5  (+73 more)
.github/workflows/: doxygen.yml
config/: kernel_conf.h.in
include/: command.h  console.h  disk.h  events.h  fat.h  monitor.h  prompt.h  service.h  shell.h  version.h
include/core/: kernel.h  kernel_exec.h  kernel_service.h  kernel_signal.h  kernel_stdio.h
include/fio/: kernel_fio.h  kernel_fsh.h
include/sysj/: kernel_jrnl.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_1.js  files_2.js  functions_0.js  functions_1.js  (+46 more)
src/: kernel.c  kernel_shell.c  kernel_stdio.c
src/cmd/: cls.c  rmon.c  svc.c  ver.c
src/cmd/fio/: cd.c  cp.c  dir.c  disks.c  dsk_block.c  mkdir.c  rm.c  type.c
src/cmd/sysj/: sysj.c
src/fio/: kernel_fio.c  kernel_fsh.c
src/sysj/: kernel_jrnl.c
